 * #1883 (Strange behavior of FORM ?)
 * #1884 (setDesign can lead to wrong Sobol' indices)
 * #1891 (Correlation of Halton sequence at high dimensions)
 * #1911 (DirectionalSampling freezes python if not correctly initialized)
 * #1912 (splitter: missing doc)
 * #1915 (computePDFGradient(const Sample &) should rely on computePDFGradient(const Point &) in DistributionImplementation)


== 1.17 release (2021-05-12) == #release-1.17

=== Library ===

==== Major changes ====

==== New classes ====
 * VertexValuePointToFieldFunction
 * KarhunenLoeveReduction
 * KarhunenLoeveValidation
 * IsotropicCovarianceModel
 * KroneckerCovarianceModel
 * VonMisesFactory
 * KFoldSplitter, LeaveOneOutSplitter

==== API changes ====
 * Removed deprecated Pairs alias
 * Removed deprecated SORMResult::getEventProbabilityHohenBichler/getGeneralisedReliabilityIndexHohenBichler
 * Removed deprecated OptimizationResult::getLagrangeMultipliers, OptimizationAlgorithm::computeLagrangeMultipliers
 * Removed deprecated FittingTest::Kolmogorov, FittingTest::BestModelKolmogorov (DistributionFactory argument only)
 * Deprecated Sample::computeStandardDeviationPerComponent, use computeStandardDeviation
 * Deprecated KarhunenLoeveResult::getEigenValues, use getEigenvalues
 * Removed StationaryCovarianceModel
 * CovarianceModel.computeAsScalar allows scalars
 * Swapped SimulatedAnnealingLHS constructor SpaceFilling/TemperatureProfile arguments
 * Added EfficientGlobalOptimization::getKrigingResult, gets the updated version of the KrigingResult passed to the constructor
 * Deprecated MultiStart::setStartingPoints/getStartingPoints, use MultiStart::setStartingSample/getStartingSample instead
 * MultiStart::setStartingPoint/getStartingPoint throws (previously did nothing)

=== Documentation ===
 * Fixed example and plot of Kolmogorov statistics.
 * Added a new example showing how to combine RandomWalkMetropolisHastings and PythonDistribution

=== Python module ===