@@ -63,3 +63,6 @@ copy dist parameter= [0.5,0.5,1,1]
 ComposedDistribution(Normal(mu = 0, sigma = 1), Normal(mu = 0, sigma = 1), class=PythonDistribution name=UniformNdPy)
 try with another Python distribution
 The construction failed on purpose as class=PythonDistribution name=UniformNdPy is not a copula
+Is discrete? True
+Is integral? True
+pdf graph= class=Graph name=X0 PDF implementation=class=GraphImplementation name=X0 PDF title=X0 PDF xTitle=X0 yTitle=PDF axes=ON grid=ON legendposition=topright legendFontSize=1 drawables=[class=Drawable name=X0 PDF implementation=class=Curve name=X0 PDF derived from class=DrawableImplementation name=X0 PDF legend=X0 PDF data=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=26 dimension=2 data=[[-1,0],[0,0],[0,0.082085],[0,0],[1,0],[1,0.287297],[1,0],[2,0],[2,0.543813],[2,0],[3,0],[3,0.757576],[3,0],[4,0],[4,0.891178],[4,0],[5,0],[5,0.957979],[5,0],[6,0],[6,0.985813],[6,0],[7,0],[7,0.995753],[7,0],[7.9,0]] color=red fillStyle=solid lineStyle=solid pointStyle=none lineWidth=2]
